[tool.poetry]
name = "hase"
version = "0.1.0"
description = "Hase is a nicer way to deal with RabbitMQ messages"
authors = ["Cristian Prieto <me@cprieto.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aio-pika = "^6.7.1"
orjson = "^3.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
